Refactor Kostal PIKO inverter integration
This update includes several key changes to the Kostal PIKO PV inverter integration:

1. **Configuration Field Change**: The 'IP-Address' field in the configuration has been replaced with 'URL'. This allows for more flexibility in specifying the connection endpoint, supporting both HTTP and HTTPS protocols.

2. **HTML Parsing Improvement**: The HTML parsing logic in PvInverterKostalPikoImpl has been enhanced for better reliability. Instead of relying on specific background colors to identify data cells, the parser now looks for patterns that match expected data formats. This change makes the parsing process more robust against changes in the inverter's web interface.

3. **Removed Unused Code**: Several references and methods related to time data collection and event handling, which were not being used, have been removed. This simplifies the implementation and reduces potential for errors.

4. **Test Adjustments**: Corresponding adjustments have been made in the test configurations and test cases to reflect these changes, ensuring that the unit tests remain valid and pass successfully.

These changes aim to improve the maintainability, flexibility, and reliability of the Kostal PIKO PV inverter integration within the OpenEMS framework.